--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -37,7 +37,7 @@
                                 {% if not exercise_summary.is_passed %}
                                     btn-danger
                                 {% else %}
-                                    {% if exercise_summary.is_full_points %}
+                                    {% if exercise_summary.is_full_points and exercise_summary.is_submitted%}
                                         btn-success
                                     {% endif %}
                                     {% if not exercise_summary.is_full_points and exercise_summary.is_submitted%}
