--- a/templates/course/_course_menu.html
+++ b/templates/course/_course_menu.html
@@ -32,6 +32,20 @@
 
     {# TODO: List categories here. Check commit 1148e0c for some existing code. #}
 
+    {% if instance.tabs.all|length > 0 %}
+        <li class="nav-header">
+            {% trans "Apps" %}
+        </li>
+        {% for tab in instance.tabs.all %}
+            <li>
+                <a href="{% url apps.views.view_tab tab_id=tab.id %}">
+                    <i class="icon-th-large"></i>
+                    {{ tab.label }}
+                </a>
+            </li>
+        {% endfor %}
+    {% endif %}
+
     {% if is_teacher or is_assistant %}
         <li class="nav-header">
             {% trans "Staff" %}
