Removed borders from the iframe tabs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -229,6 +229,6 @@ ul.exercise_rounds li.exercise_round:last-child {
 ** APPS ***********************************************************************
 ******************************************************************************/
 
-iframe.iframe-plugin {
+iframe.iframe-plugin, iframe.iframe-tab {
     border: none;
 }
