--- a/templates/exercise/exercise_base.html
+++ b/templates/exercise/exercise_base.html
@@ -36,6 +36,10 @@
 
                 {% include "exercise/_exercise_statistics.html" with exercise=exercise summary=exercise_summary %}
                 {% endblock %}
+
+                {% for plugin in plugins %}
+                    {{ plugin.render }}
+                {% endfor %}
             </div>
         </div>
     </div>
