Added sanitize filter to the plugin renderers in the templates.

--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -182,7 +182,7 @@
         {% endif %}
 
         {% for plugin in plugins %}
-            {{ plugin.render|safe }}
+            {{ plugin.render|safe|sanitize }}
         {% endfor %}
     </div>
 </div>
