--- a/templates/exercise/exercise_base.html
+++ b/templates/exercise/exercise_base.html
@@ -38,7 +38,7 @@
                 {% endblock %}
 
                 {% for plugin in plugins %}
-                    {{ plugin.render|safe }}
+                    {{ plugin.render|safe|sanitize }}
                 {% endfor %}
             </div>
         </div>
