Renamed "plugins" to "plugin_renderers" where the variable plugins actually contained plugin renderers.

--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -181,8 +181,8 @@
             {% endif %}
         {% endif %}
 
-        {% for plugin in plugins %}
-            {{ plugin.render|safe|sanitize }}
+        {% for plugin_renderer in plugin_renderers %}
+            {{ plugin_renderer.render|safe|sanitize }}
         {% endfor %}
     </div>
 </div>
