--- a/templates/exercise/exercise_base.html
+++ b/templates/exercise/exercise_base.html
@@ -37,8 +37,8 @@
                 {% include "exercise/_exercise_statistics.html" with exercise=exercise summary=exercise_summary %}
                 {% endblock %}
 
-                {% for plugin in plugins %}
-                    {{ plugin.render|safe|sanitize }}
+                {% for plugin_renderer in plugin_renderers %}
+                    {{ plugin_renderer.render|safe|sanitize }}
                 {% endfor %}
             </div>
         </div>
