- Removed maximum group size from exercise info as group submissions are not implemented anyway. - Added max submissions to exercise info. - Template filter for nicely formatted max submissions.

--- a/templates/exercise/exercise_base.html
+++ b/templates/exercise/exercise_base.html
@@ -32,7 +32,7 @@
             </div>
             <div class="span2">
                 {% block exerciseinfo %}
-                {% include "exercise/_exercise_info.html" with exercise=exercise %}
+                {% include "exercise/_exercise_info.html" with exercise=exercise user_profile=request.user.get_profile %}
 
                 {% include "exercise/_exercise_statistics.html" with exercise=exercise summary=exercise_summary %}
                 {% endblock %}
