--- a/templates/exercise/_exercise_info.html
+++ b/templates/exercise/_exercise_info.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load exercise_info %}
 
 <h3>{% trans "Exercise info" %}</h3>
 <dl>
@@ -9,11 +10,11 @@
     <dd>{{ exercise.max_points }}</dd>
     
     <dt>{% trans "Points to pass" %}</dt>
-    <dd>{{ exercise.points_to_pass }}</dd>
+    <dd>{{ exercise.points_to_pass }}</dd>-->
     
     <dt>{% trans "Allowed submissions" %}</dt>
-    <dd>{{ exercise.max_submissions }}</dd>-->
+    <dd>{{ exercise|max_submissions:user_profile }}</dd>
     
-    <dt>{% trans "Maximum group size" %}</dt>
-    <dd>{{ exercise.max_group_size }}</dd>
+    <!--<dt>{% trans "Maximum group size" %}</dt>
+    <dd>{{ exercise.max_group_size }}</dd>-->
 </dl>
