New feature: In teacher's view, there's a form which can be used to create and assess multiple submissions for students. The form takes the data in json-format.
This is an initial working commit which has some bad design decisions and TODOs which will hopefulle get fixed in near future as it was needed to get this feature asap.

--- a/templates/course/teachers_view.html
+++ b/templates/course/teachers_view.html
@@ -76,4 +76,9 @@
         class="btn btn-primary btn-mini">
     <i class="icon-plus-sign icon-white"></i> {% trans "Add new module" %}
 </a>
+
+<form action="/course/{{ instance.id }}/create_and_assess_submission_batch/" method="post">{% csrf_token %}
+    <textarea name="submissions_json"></textarea>
+    <input type="submit" value="{% trans "Submit" %}" />
+</form>
 {% endblock %}
