- Since the ordering of the round summaries in the CourseSummary was removed, I added a method which gives the round summaries in correct order. - The categorizing of exercises in ExerciseRoundSummaries was broken when generate=False was used because the code was in _generate_summary. I lifted that piece of code out of there, to the __init__.

--- a/templates/course/view_instance.html
+++ b/templates/course/view_instance.html
@@ -28,7 +28,7 @@
         <a href="#" id="toggleOldModules" data-show-text="{% trans "Show old assignments" %}"
                     data-hide-text="{% trans "Hide old assignments" %}" class="hide">{% trans "Show old assignments" %}</a>
         <ul class="exercise_rounds">
-        {% for round_summary in course_summary.visible_round_summaries %}
+        {% for round_summary in course_summary.get_ordered_visible_round_summaries %}
             <li class="exercise_round {{ round_summary.get_classes }}">
                 {% if round_summary.exercise_round.is_after_open or is_teacher or is_assistant %}
                 <div class="exercise-icons">
