Fixes issue #102 by closing iframe tags properly.

--- a/templates/plugins/external_iframe_tab.html
+++ b/templates/plugins/external_iframe_tab.html
@@ -1,1 +1,1 @@
-<iframe class="iframe-tab" height={{ height }} width={{ width }} src="{{ src }}" />
+<iframe class="iframe-tab" height={{ height }} width={{ width }} src="{{ src }}" ></iframe>
